--- a/src/vec/vec/impls/seq/makefile
+++ b/src/vec/vec/impls/seq/makefile
@@ -7,7 +7,7 @@ SOURCEH  =
 LIBBASE  = libpetscvec
 MANSEC   = Vec
 LOCDIR   = src/vec/vec/impls/seq/
-DIRS     = ftn-kernels seqviennacl seqviennaclcuda seqcuda kokkos seqhip
+DIRS     = ftn-kernels seqviennacl seqviennaclcuda kokkos cupm
 
 include ${PETSC_DIR}/lib/petsc/conf/variables
 include ${PETSC_DIR}/lib/petsc/conf/rules
